Create initial SEO changes

--- a/aboutYou.html
+++ b/aboutYou.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="If you have mental health problems and are low on money, we help">
   <link rel="stylesheet" href="./css/css.css">
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="canonical" href="https://crazybrainbangkok.com">
