--- a/emergencyHelp.html
+++ b/emergencyHelp.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Do you need help NOW? Do you have depression, are bipolar or suicidal in Bangkok? We can help now!">
   <link rel="stylesheet" href="./css/css.css">
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="canonical" href="https://crazybrainbangkok.com">
