--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description"
+        content="Do you need help with mental health in Bangkok? We offer help for free. We are a NGO to help those who can't afford private healthcare">
     <link rel="icon" href="./favicon.ico">
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
