--- a/services.html
+++ b/services.html
@@ -6,6 +6,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description"
+        content="We currently offer Emergency Help and a well rounded workshop-like consultation about everything you have to know about your mental disorder">
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="canonical" href="https://crazybrainbangkok.com">
@@ -56,7 +58,7 @@
             and how to live with it and get it under control. This applies especially in receiving techniques in how to
             survive suicidal moods. This also includes how to talk with doctors and how to handle medication. We cannot
             replace the regular healthcare system but we can support you surviving in it.</p>
-            
+
     </div>
 
     <footer>Made at Asoke in Bangkok with 💖</footer>
