--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Contact us via Line, Telegram or E-Mail">
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="canonical" href="https://crazybrainbangkok.com">
