--- a/whereToMeet.html
+++ b/whereToMeet.html
@@ -6,6 +6,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description"
+        content="We meet with on a neutral and comfortable space with you. We also offer online consultation. We are a modern approach to mental health">
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="canonical" href="https://crazybrainbangkok.com">
