Formatting and more minor SEO

--- a/aboutYou.html
+++ b/aboutYou.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -10,10 +8,8 @@
   <link rel="stylesheet" href="./css/css.css">
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="canonical" href="https://crazybrainbangkok.com">
-  <title>Crazy Brain Bangkok</title>
+  <title>About you - Crazy Brain Bangkok</title>
 </head>
-
-
 
 <body>
 
@@ -43,11 +39,10 @@
     </nav>
   </header>
 
-
   <div class="content">
 
     <h2>About you</h2>
-    
+
     <p>We made the experience that the most vulnerable people in Thai society falling into these categories</p>
     <p><strong>Age</strong>: Young adults from 16-30 years</p>
     <p><strong>Income</strong>: Cannot afford private medical care</p>
