--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -10,10 +8,8 @@
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="canonical" href="https://crazybrainbangkok.com">
-    <title>Crazy Brain Bangkok</title>
+    <title>Contact us - Crazy Brain Bangkok</title>
 </head>
-
-
 
 <body>
 
@@ -59,7 +55,6 @@
         <h2>E-Mail</h2>
         <h2 class="social-ID">info@crazybrainbangkok.com</h2>
     </div>
-
 
     <footer>Made at Asoke in Bangkok with 💖</footer>
 </body>
