--- a/pricing.html
+++ b/pricing.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -10,10 +8,8 @@
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="canonical" href="https://crazybrainbangkok.com">
-    <title>Crazy Brain Bangkok</title>
+    <title>Pricing - Crazy Brain Bangkok</title>
 </head>
-
-
 
 <body>
 
@@ -52,7 +48,6 @@
         <p>We provide our services based on private donations, volunteer work and support from other organizations.</p>
         
     </div>
-
 
     <footer>Made at Asoke in Bangkok with 💖</footer>
 </body>
