--- a/whereToMeet.html
+++ b/whereToMeet.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,10 +9,8 @@
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="canonical" href="https://crazybrainbangkok.com">
-    <title>Crazy Brain Bangkok</title>
+    <title>Consultation locations - Crazy Brain Bangkok</title>
 </head>
-
-
 
 <body>
 
@@ -61,7 +57,6 @@
             <li>At locations which are known and comfortable to the person in distress</li>
         </ul>
     </div>
-
 
     <footer>Made at Asoke in Bangkok with 💖</footer>
 </body>
