--- a/emergencyHelp.html
+++ b/emergencyHelp.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -10,10 +8,8 @@
   <link rel="stylesheet" href="./css/css.css">
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="canonical" href="https://crazybrainbangkok.com">
-  <title>Crazy Brain Bangkok</title>
+  <title>Emergency Help - Crazy Brain Bangkok</title>
 </head>
-
-
 
 <body>
 
@@ -42,7 +38,6 @@
       <a href="./contact.html">Contact</a>
     </nav>
   </header>
-
 
   <div class="content">
 
