Improve SEO texts

--- a/howToSurvive.html
+++ b/howToSurvive.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description"
-        content="We offer personal workshops to affected individuals. We help you identifying, discussing and confirming the existing disorder">
+        content="We offer personal workshops to affected individuals. We help you identifying, discussing and confirming the existing illness">
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="canonical" href="https://crazybrainbangkok.com">
