--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description"
-        content="We currently offer Emergency Help and a well rounded workshop-like consultation about everything you have to know about your mental disorder">
+        content="We currently offer Emergency Help and a well rounded workshop-like consultation about everything you have to know about your mental illness">
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="canonical" href="https://crazybrainbangkok.com">
