--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="We are CrazyBrainBangkok, a mental health NGO. We are a modern and free approach to modern healthcare in Bangkok">
+    <meta name="description"
+        content="We are CrazyBrainBangkok, a mental health NGO. We are a modern and free approach to modern healthcare in Bangkok">
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="canonical" href="https://crazybrainbangkok.com">
