--- a/aboutYou.html
+++ b/aboutYou.html
@@ -43,10 +43,25 @@
 
     <h2>About you</h2>
 
+    <p>People with a mental illness may behave in strange ways or have strange thoughts. Mental illnesses can affect
+      the day-to-day functioning of a person. Mental illnesses develop during the life of a person. People with a mental
+      illness sometimes have problems dealing with other people or struggle with daily functioning.</p>
+
+    <p>The most common mental illnesses are</p>
+    <ul>
+      <li>Bipolar / Manic Depressive</li>
+      <li>Severe Depression</li>
+      <li>Borderline</li>
+      <li>Anxiety</li>
+      <li>PTSD/C-PTSD</li>
+      <li>Adjustment disorder</li>
+      <li>Dysthymia / Neurotic Depressive</li>
+    </ul>
+
     <p>We made the experience that the most vulnerable people in Thai society falling into these categories</p>
     <p><strong>Age</strong>: Young adults from 16-30 years</p>
     <p><strong>Income</strong>: Cannot afford private medical care</p>
-    <p><strong>Social</strong>: Limited social contacts to talk about personal experiences</p>
+    <p><strong>Social</strong>: Limited social contacts or limited social understanding of mental health</p>
     <p>Also limited <strong>knowledge</strong> about:</p>
     <ul style="list-style-type: square;">
       <li>How the Thai health system operates</li>
