--- a/howToSurvive.html
+++ b/howToSurvive.html
@@ -42,33 +42,33 @@
 
     <div class="content">
 
-        <p>Someone often develops a mental disorder early on life due to many factors.<br>We commonly see those disorder
-            in our visitors</p>
+        <p>A visit at a psychiatrist is important and can't be replaced. They are specialized on mental health and also
+            can legally prescribe strong medication.</p>
+
+        <p>Common issues with receiving treatment from a psychiatrist are:</p>
         <ul>
-            <li>Adjustment disorder</li>
-            <li>Bipolar (manic depressive)</li>
-            <li>Depression</li>
-            <li>Dysthymia</li>
-            <li>Borderline</li>
-            <li>Anxiety</li>
-            <li>PTSD/C-PTSD</li>
+            <li>Hard to receive an appointment quickly enough</li>
+            <li>Services are too expensive</li>
+            <li>In case of public hospitals they don't have enough time</li>
+            <li>They don't explain enough</li>
+            <li>They don't talk about the long term treatment plan</li>
+            <li>Receiving the wrong diagnosis</li>
         </ul>
-        <p>If psychiatrists have been visited in the past they often misdiagnose or don't take the person in distress
-            serious. Often appointments take too long to get.<br>Or the doctor doesn't explain the process on how they
-            plan to treat the disorder.</p>
-        <p>Our visitors often already experienced suicide attempts and often it is just a matter of time until they are
-            successful. Most of the times there is no hope to be healed forever. But we can help learning to live with
-            it.</p>
+
+        <p>You maybe already experienced suicide attempts and often it is just a matter of time until it takes a sad
+            ending. Most of the times there is no hope to be healed forever. But we can help learning to live with a
+            mental illness.
+        </p>
+
         <p>We offer those individual coaching topics:</p>
         <ul>
-            <li>Identifying, discussing and confirming the existing disorder(s). Helping you to understand the diagnosis
-                from your previous doctors.</li>
+            <li>Identifying, discussing and confirming the existing illness(es). Helping you to read and understand the
+                diagnosis you received from your previous doctors.</li>
             <li>Explaining the medication strategy of psychiatrists and warning about common issues and dangers of it
             </li>
             <li>Showing a toolset of techniques on how to handle sudden mental distress</li>
             <li>Help you to receiving public healthcare in Bangkok in case you come from outside Bangkok</li>
-            <li>Showing you existing communities of people your age who are trying to cope in healthy and unhealthy ways
-            </li>
+            <li>Showing you communities online and offline to process the struggle</li>
         </ul>
 
         <p>Please <a class="myButton" href="./contact.html">contact us</a> so we can be there for you.</p>
