--- a/services.html
+++ b/services.html
@@ -48,10 +48,10 @@
         <p>Emergency Help is about getting immediate help in distress. Have someone to talk to. Receiving the right kind
             of advice. This can be via Line or in some cases meeting in real life. This is for all the urgent cases in
             which regular doctors aren't available for any reason.</p>
-        <p>2. <a href="./howToSurvive.html" class="myButton">How to survive mental disorders</a></p>
-        <p>How to survive mental disorders is a consultation which helps you to understand what mental disorder you have
+        <p>2. <a href="./howToSurvive.html" class="myButton">How to survive mental illnesses</a></p>
+        <p>How to survive mental illnesses is a consultation which helps you to understand what mental illness you have
             and how to live with it and get it under control. This applies especially in receiving techniques in how to
-            survive suicidal moods. This also includes how to talk with doctors and how to handle medication. We cannot
+            avoid suicidal moods. This also includes how to talk with doctors and how to handle medication. We cannot
             replace the regular healthcare system but we can support you surviving in it.</p>
 
     </div>
