--- a/unused/index copy.html
+++ b/unused/index copy.html
@@ -51,9 +51,9 @@
             kind of advice. This can be via Line or in some cases meeting in real life. This is for all the urgent cases
             in which regular doctors aren't available for whatever reason.
 
-            <p>2. How to survive mental disorders a.k.a. "I need to be healed"</p>
+            <p>2. How to survive mental illnesses a.k.a. "I need to be healed"</p>
 
-            How to survive mental disorders is a consultation which helps you to understand what mental disorder you
+            How to survive mental illnesses is a consultation which helps you to understand what mental illness you
             have and how to live with it and get it under control. This applies especially in receiving techniques in
             how to survive suicidal moods. This also includes how to talk with doctors and how to handle medication. We
             cannot replace the regular healthcare system but we can support you surviving in it.
@@ -76,9 +76,9 @@
             kind of advice. This can be via Line or in some cases meeting in real life. This is for all the urgent cases
             in which regular doctors aren't available for whatever reason.
 
-            <p>2. How to survive mental disorders a.k.a. "I need to be healed"</p>
+            <p>2. How to survive mental illnesses a.k.a. "I need to be healed"</p>
 
-            How to survive mental disorders is a consultation which helps you to understand what mental disorder you
+            How to survive mental illnesses is a consultation which helps you to understand what mental illness you
             have and how to live with it and get it under control. This applies especially in receiving techniques in
             how to survive suicidal moods. This also includes how to talk with doctors and how to handle medication. We
             cannot replace the regular healthcare system but we can support you surviving in it.
