--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="content">
 
         <div class="mobile-content">
-            <h2>We are a free mental health NGO to help people in Bangkok</h2>
+            <h2>We are a non-profit mental health organization based in Bangkok</h2>
             <h2>What do you need?</h2>
 
             <a href="./emergencyHelp.html" class="myButton">I'm in distress</a>
@@ -59,9 +59,9 @@
         kind of advice. This can be via Line or in some cases meeting in real life. This is for all the urgent cases
         in which regular doctors aren't available for whatever reason.
 
-        <p>2. How to survive mental disorders a.k.a. "I need to be healed"</p>
+        <p>2. How to survive mental illnesses a.k.a. "I need to be healed"</p>
 
-        How to survive mental disorders is a consultation which helps you to understand what mental disorder you
+        How to survive mental illnesses is a consultation which helps you to understand what mental illness you
         have and how to live with it and get it under control. This applies especially in receiving techniques in
         how to survive suicidal moods. This also includes how to talk with doctors and how to handle medication. We
         cannot replace the regular healthcare system but we can support you surviving in it.
