--- a/aboutYou.html
+++ b/aboutYou.html
@@ -49,16 +49,18 @@
 
     <p>The most common mental illnesses are</p>
     <ul>
-      <li>Bipolar / Manic Depressive</li>
-      <li>Severe Depression</li>
-      <li>Borderline</li>
-      <li>Anxiety</li>
-      <li>PTSD/C-PTSD</li>
-      <li>Adjustment disorder</li>
-      <li>Dysthymia / Neurotic Depressive</li>
+      <li><a href="https://simple.wikipedia.org/wiki/Bipolar_disorder">Bipolar / Manic Depressive</a></li>
+      <li><a href="https://simple.wikipedia.org/wiki/Depression_(mental_illness)">Severe Depression</a></li>
+      <li><a href="https://simple.wikipedia.org/wiki/Borderline_personality_disorder">Borderline</a></li>
+      <li><a href="https://simple.wikipedia.org/wiki/Anxiety">Anxiety</a></li>
+      <li><a href="https://simple.wikipedia.org/wiki/Post-traumatic_stress_disorder">PTSD/C-PTSD</a></li>
+      <li><a href="https://simple.wikipedia.org/wiki/Adjustment_disorder">Adjustment
+          disorder</a></li>
+      <li><a href="https://simple.wikipedia.org/wiki/Dysthymia">Dysthymia /
+          Neurotic Depressive</a></li>
     </ul>
 
-    <p>We made the experience that the most vulnerable people in Thai society falling into these categories</p>
+    <p>If you see yourself in this description then you deserve all the support you can get:</p>
     <p><strong>Age</strong>: Young adults from 16-30 years</p>
     <p><strong>Income</strong>: Cannot afford private medical care</p>
     <p><strong>Social</strong>: Limited social contacts or limited social understanding of mental health</p>
@@ -68,7 +70,7 @@
       <li>How mental illnesses can be treated</li>
       <li>How regular doctors treat mental illnesses</li>
     </ul>
-    <p>If you see yourself in here, you are who we want to help the most.</p>
+    <p>If you see yourself in here, YOU ARE WHO WE WANT TO HELP THE MOST</p>
     <p>Don't worry about those factors, they don't matter to us:</p>
     <ul style="list-style-type: square;">
       <li>Nationality</li>
