--- a/whereToMeet.html
+++ b/whereToMeet.html
@@ -43,8 +43,8 @@
     <div class="content">
         <h2>Where to meet</h2>
 
-        <p>We don't have an office location which is accessible for the public.<br><br>But face-to-face contact is
-            important. To meet someone in real life and have a conversation. Emotions matter. Feeling being real and
+        <p>We currently don't have an office location which is accessible for the public.<br><br>But face-to-face contact is
+            important, to o meet someone in real life and have a conversation. Emotions matter. Feeling being real and
             taken seriously matters.<br>So additional to our online consultation we also real life meeting ups.</p>
         <p>We know several public accessible and safe environments to meet. Safety is important and a casual environment
             can ease the tension. We don't want to have a clinical environment. For mental issues we need comfortable
@@ -54,7 +54,7 @@
             <li>Malls</li>
             <li>Cafes</li>
             <li>At a park</li>
-            <li>At locations which are known and comfortable to the person in distress</li>
+            <li>At locations which are known and comfortable who is looking for help</li>
         </ul>
     </div>
 
